shortcut-editor: untoggle Edit button on cancel

When canceling the editing of a custom shortcut, the "Edit" button
keeps pressed, causing inconsistencies when editing future custom
events.

To reproduce that:
 - Open a custom shortcut and click "Edit"
 - Start typing the new shortcut; the "Cancel" button will appear
 - *Before* completing the new shortcut, click "Cancel"; the dialog will hide
 - Open a custom shortcut again; the "Edit" button is still toggled

Fix that by properly untoggling the Edit button when cancelling
the editing.

https://bugzilla.gnome.org/show_bug.cgi?id=777824